# prani

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
src/: bridge.rs  dsp.rs  emotion.rs  error.rs  fatigue.rs  ffi.rs  lib.rs  math.rs  preset.rs  rng.rs  sequence.rs  spatial.rs  species.rs  stream.rs  tract.rs  vocalization.rs  voice.rs
tests/: integration.rs
