[package]
name = "prani"
version = "1.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "prani — Creature and animal vocal synthesis: species-specific voice models, call patterns, non-human vocal tracts"
homepage = "https://github.com/MacCracken/prani"
repository = "https://github.com/MacCracken/prani"
readme = "README.md"
documentation = "https://docs.rs/prani"
keywords = ["creature", "animal", "vocal", "synthesis", "sound"]
categories = ["multimedia::audio"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
hisab = { version = "1.2", default-features = false, features = ["num", "calc"] }
libm = "0.2"
naad = { version = "1", optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
svara = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[features]
default = ["std", "naad-backend"]
full = ["std", "naad-backend", "logging", "ffi"]
std = ["serde/std", "svara/std", "thiserror/std", "tracing/std"]
naad-backend = ["dep:naad", "std"]
logging = ["dep:tracing-subscriber"]
ffi = ["std"]

[[bench]]
name = "benchmarks"
harness = false
